--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,3 @@
-currentVersion=1.0-SNAPSHOT
+currentVersion=2.0-SNAPSHOT
 artifactory_user=admin
-artifactory_password=password
+artifactory_password=Admin@123
